# delta-query-router

./: .gitignore  DEVIATIONS.md  Makefile  PROJECT.md  PROJECT_PHASE1.md  README.md
delta-router-sdk/: .coverage  README.md  pyproject.toml
delta-router-sdk/delta_router/: __init__.py  auth.py  cursor.py  exceptions.py  sql.py  types.py
delta-router-sdk/tests/: conftest.py  test_auth.py  test_connection.py  test_cursor.py  test_integration.py
duckdb-worker/: .dockerignore  Dockerfile  credential_vending.py  main.py  pyproject.toml
duckdb-worker/tests/: test_credential_vending.py
routing-service/: .dockerignore  Dockerfile  auth.py  benchmarks_api.py  catalog_service.py  collections_api.py  db.py  engine_state.py  engines_api.py  ephemeral_warehouses.py  feature_builder.py  log_cleaner.py  main.py  model_inference.py  model_trainer.py  models_api.py  permissions.py  permissions_api.py  probes_api.py  pyproject.toml  query_analyzer.py  query_features.py  query_logger.py  routing_engine.py  routing_profiles_api.py  tpcds_api.py  tpcds_queries.py
routing-service/db/: schema.sql
routing-service/tests/: test_auth.py  test_benchmarks.py  test_benchmarks_ephemeral.py  test_catalog_endpoints.py  test_catalog_service.py  test_collections.py  test_db.py  test_dual_identity.py  test_engine_state.py  test_engines.py  test_ephemeral_warehouses.py  test_error_handling.py  test_feature_builder.py  test_health_backends.py  test_k8s_scaling.py  test_log_cleaner.py  test_log_endpoints.py  test_main_helpers.py  test_model_endpoints.py  test_model_inference.py  test_permissions.py  (+17 more)
(+216 files in other folders)
