[project]
name = "delta-router-sdk"
version = "0.1.0"
description = "Python SDK for Delta Router — DB-API 2.0 interface for multi-engine SQL routing"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "respx>=0.22.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["delta_router"]

[tool.pytest.ini_options]
testpaths = ["tests"]
