[project]
name = "duckdb-worker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "deltalake>=1.5.0",
    "duckdb>=1.4.4",
    "fastapi>=0.135.1",
    "pyarrow>=19.0.0",
    "uvicorn>=0.41.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
