[project]
name = "routing-service"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "databricks-sdk>=0.97.0",
    "fastapi>=0.129.0",
    "httpx>=0.28.1",
    "kubernetes>=35.0.0",
    "psycopg2-binary>=2.9.11",
    "sqlglot>=30.0.3",
    "uvicorn>=0.40.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
